k8s/apps/multimedia/bazarr/svc.k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: bazarr
  namespace: bazarr
  labels:
    app.kubernetes.io/name: bazarr
    app.kubernetes.io/instance: bazarr
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: bazarr
    app.kubernetes.io/instance: bazarr
  ports:
    - name: http
      port: 6767
      targetPort: 6767
      protocol: TCP
