k8s/apps/multimedia/bazarr/ingress.k8s.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/traefik.io/ingressroute_v1alpha1.json
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bazarr
  namespace: bazarr
  labels:
    app.kubernetes.io/name: bazarr
    app.kubernetes.io/instance: bazarr
  annotations:
    kubernetes.io/ingress.class: ingress-internal-traefik
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`bazarr.${CLUSTER_DOMAIN}`)
      middlewares:
        - name: authentik
          namespace: authentik
      services:
        - name: bazarr
          namespace: bazarr
          port: 6767
    - kind: Rule
      match: "Host(`bazarr.${CLUSTER_DOMAIN}`) && PathPrefix(`/outpost.goauthentik.io/`)"
      services:
        - name: authentik-server
          namespace: authentik
          port: http
    - kind: Rule
      match: Host(`bazarr-pgadmin.${CLUSTER_DOMAIN}`)
      services:
        - name: bazarr-pg-pgadmin
          namespace: bazarr
          port: pgadmin
